@@ -1,6 +1,10 @@
 
 2007-05-24  Benno Schulenberg  <benno@vertaalt.nl>
 
+	* web/layout.html: Make sidebar links relative again.
+
+2007-05-24  Benno Schulenberg  <benno@vertaalt.nl>
+
 	* Makefile, doc/Makefile, web/Makefile, web/to-html: Adjust paths.
 
 2007-05-23  Benno Schulenberg  <benno@vertaalt.nl>
